// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Active section change 1`] = `
<withI18nextTranslation(BottomPanel)
  activeSection="test"
  contributions={
    [
      {
        "create": [Function],
        "id": "testBottomPanel",
        "placement": "bottomPanel",
        "section": "test",
      },
      {
        "create": [Function],
        "id": "mainBottomPanel",
        "placement": "bottomPanel",
      },
      {
        "create": [Function],
        "id": "fooBottomPanel",
        "placement": "bottomPanel",
        "section": "foo",
      },
    ]
  }
>
  <BottomPanel
    activeSection="test"
    contributions={
      [
        {
          "create": [Function],
          "id": "testBottomPanel",
          "placement": "bottomPanel",
          "section": "test",
        },
        {
          "create": [Function],
          "id": "mainBottomPanel",
          "placement": "bottomPanel",
        },
        {
          "create": [Function],
          "id": "fooBottomPanel",
          "placement": "bottomPanel",
          "section": "foo",
        },
      ]
    }
    i18n={{}}
    t={[Function]}
    tReady={false}
  >
    <section
      id="tr__bottom-panel"
    >
      <div>
        test
      </div>
      <div>
        Should always be there
      </div>
    </section>
  </BottomPanel>
</withI18nextTranslation(BottomPanel)>
`;

exports[`Active section change 2`] = `
<withI18nextTranslation(BottomPanel)
  activeSection="other"
  contributions={
    [
      {
        "create": [Function],
        "id": "testBottomPanel",
        "placement": "bottomPanel",
        "section": "test",
      },
      {
        "create": [Function],
        "id": "mainBottomPanel",
        "placement": "bottomPanel",
      },
      {
        "create": [Function],
        "id": "fooBottomPanel",
        "placement": "bottomPanel",
        "section": "foo",
      },
    ]
  }
>
  <BottomPanel
    activeSection="other"
    contributions={
      [
        {
          "create": [Function],
          "id": "testBottomPanel",
          "placement": "bottomPanel",
          "section": "test",
        },
        {
          "create": [Function],
          "id": "mainBottomPanel",
          "placement": "bottomPanel",
        },
        {
          "create": [Function],
          "id": "fooBottomPanel",
          "placement": "bottomPanel",
          "section": "foo",
        },
      ]
    }
    i18n={{}}
    t={[Function]}
    tReady={false}
  >
    <section
      id="tr__bottom-panel"
    >
      <div>
        Should always be there
      </div>
    </section>
  </BottomPanel>
</withI18nextTranslation(BottomPanel)>
`;

exports[`One active section with contribution 1`] = `
<section
  id="tr__bottom-panel"
>
  <div>
    test
  </div>
  <div>
    Should always be there
  </div>
</section>
`;

exports[`One active section with contribution and props 1`] = `
<section
  id="tr__bottom-panel"
>
  <div>
    Should always be there
  </div>
  <div
    activeSection="foo"
    i18n={{}}
    t={[Function]}
    tReady={false}
  >
    Foo section, with props
  </div>
</section>
`;

exports[`active section without contribution 1`] = `
<section
  id="tr__bottom-panel"
>
  <div>
    Should always be there
  </div>
</section>
`;
